--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1414,11 +1414,11 @@ select {
 .-mt-px {
   margin-top: -1px;
 }
-.mb-3 {
-  margin-bottom: 0.75rem;
-}
 .mb-8 {
   margin-bottom: 2rem;
+}
+.mb-3 {
+  margin-bottom: 0.75rem;
 }
 .mr-1 {
   margin-right: 0.25rem;
@@ -1558,11 +1558,11 @@ select {
 .w-28 {
   width: 7rem;
 }
-.w-56 {
-  width: 14rem;
-}
 .w-32 {
   width: 8rem;
+}
+.w-56 {
+  width: 14rem;
 }
 .w-2\/5 {
   width: 40%;
@@ -1878,9 +1878,13 @@ select {
   --tw-border-opacity: 1;
   border-color: rgb(59 130 246 / var(--tw-border-opacity));
 }
-.border-emerald-500 {
+.border-indigo-500 {
   --tw-border-opacity: 1;
-  border-color: rgb(16 185 129 / var(--tw-border-opacity));
+  border-color: rgb(99 102 241 / var(--tw-border-opacity));
+}
+.border-emerald-300 {
+  --tw-border-opacity: 1;
+  border-color: rgb(110 231 183 / var(--tw-border-opacity));
 }
 .bg-white {
   --tw-bg-opacity: 1;
@@ -1976,9 +1980,6 @@ select {
 }
 .bg-no-repeat {
   background-repeat: no-repeat;
-}
-.fill-blue-600 {
-  fill: #2563eb;
 }
 .object-cover {
   -o-object-fit: cover;
@@ -2719,11 +2720,6 @@ select {
     color: rgb(156 163 175 / var(--tw-text-opacity));
   }
 
-  .dark\:text-gray-600 {
-    --tw-text-opacity: 1;
-    color: rgb(75 85 99 / var(--tw-text-opacity));
-  }
-
   .dark\:hover\:text-blue-500:hover {
     --tw-text-opacity: 1;
     color: rgb(59 130 246 / var(--tw-text-opacity));
@@ -2784,8 +2780,8 @@ select {
     margin-bottom: 1rem;
   }
 
-  .sm\:mr-5 {
-    margin-right: 1.25rem;
+  .sm\:mr-4 {
+    margin-right: 1rem;
   }
 
   .sm\:block {
